# aichat

./: .CLAUDE.md  .GEMINI.md  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTROL_MAPPING.md  Makefile  README.md  REFACTOR_LOG.md  analysis_options.yaml  docker-compose.ports.yml  docker-compose.yml  e2e_api_test.py  entrypoint  install  install.sh  lmstudio-mcp.json  pubspec.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test_all_tools.py  uninstall.sh
.dart_tool/: package_config.json  package_graph.json
.github/compose/: smoke-no-host-ports.yml
.github/scripts/: gen_lmstudio_json.py
.github/workflows/: ci-batched.yml  ci.yml  dart-ci.yml  release.yml  sbom.yml  security-checks.yml  security.yml  vision-ci.yml
docker/auth/: Dockerfile  requirements.txt  server.py
docker/browser/: Dockerfile  app.py  requirements.txt
docs/: ci-orchestrator.md
lib/: compaction.dart  config.dart  database.dart  llm_client.dart  mcp_client.dart  model_profiles.dart  models.dart  personalities.dart  router.dart  tool_router.dart
scripts/: cache-image.sh
test/: e2e_regression.py
tests/: conftest.py  test_anime_pipeline_e2e.py  test_architecture.py  test_batch_jobs.py  test_browser_gpu.py  test_cli_mcp_server.py  test_compaction.py  test_compaction_enhancements.py  test_comprehensive_e2e.py  test_conversation_db.py  test_database_tools.py  test_face_recognition.py  test_finetuning.py  test_full_regression.py  test_image_pipeline.py  test_image_rendering.py  test_image_search_e2e.py  test_keybinds.py  test_llm_api_smoke.py  test_mega_tools.py  test_new_services.py  test_orchestrate.py  test_sanitizer.py  test_shell_dirs.py  test_shell_paths.py  test_smoke.py  test_ssh_keys.py  test_streaming.py  test_thinking.py  test_tool_args.py  test_tool_scheduler.py  test_toolkit.py  test_tools_e2e.py  test_tui.py  test_vision_e2e.py  test_vision_tools.py
vision/: .env.example  Makefile  README.md  conftest.py  pyproject.toml
vision/compose/: inference.yml  mcp.yml
vision/docs/: api.md  architecture.md  models.md  operations.md  security.md  testing.md
vision/mcp-server/: Dockerfile  requirements.txt
vision/mcp-server/app/: backends.py  config.py  main.py  models.py
vision/mcp-server/app/clients/: compreface.py  router.py
vision/mcp-server/app/tools/: face.py  vision.py
vision/mcp-server/app/utils/: image.py
vision/scripts/: benchmark.py  setup_nvidia.sh  smoke_test.sh
vision/services/vision-router/: .dockerignore  Dockerfile  requirements.txt
vision/services/vision-router/app/: config.py  inference.py  main.py  models.py  preprocessing.py
vision/tests/: conftest.py
vision/tests/e2e/: test_mcp_tools.py
vision/tests/fixtures/: images.py
vision/tests/integration/: test_compreface_client.py  test_vision_router_client.py
vision/tests/unit/: conftest.py  test_config.py  test_image_utils.py  test_models.py  test_preprocessing.py
vision/triton/model_repository/clip_vit_b32/: config.pbtxt
vision/triton/model_repository/efficientnet_b0/: config.pbtxt
vision/triton/model_repository/fashion_clip/: config.pbtxt
vision/triton/model_repository/wd_tagger/: config.pbtxt
vision/triton/model_repository/yolov8n/: config.pbtxt
vision/triton/scripts/: download_models.sh
vision/windows-setup/: Deploy-VisionStack.ps1
(+135 files in other folders)
