[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aichat"
version = "0.1.0"
description = "Codex-like Textual TUI with research and operator tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "textual>=0.71.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1"
]

[project.scripts]
aichat = "aichat.app:main"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
"aichat" = ["assets/*.tcss", "assets/themes/*.tcss"]
