[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vision-mcp"
version = "0.1.0"
description = "GPU-first vision MCP stack — face recognition and Triton inference"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "gpu: requires a GPU to be available",
    "integration: requires at least one running service",
    "e2e: requires the full vision stack running",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PERF"]
ignore = ["B008", "B904"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
skips = ["B101"]  # assert is used intentionally in tests
targets = ["vision/mcp-server/app", "vision/services/vision-router/app"]
